Project structure changes Added db support for blog create and blog list