@@ -1,11 +1,11 @@
 package com.example.blogapp.service;
 
-import com.example.blogapp.domain.blog.blogcreate.Blog;
+import com.example.blogapp.domain.blog.BlogCreateDaoReq;
 import com.example.blogapp.exception.BlogApiException;
-import com.example.blogapp.mapper.BlogAppObjectMapper;
-import com.example.blogapp.model.ResultStatus;
-import com.example.blogapp.model.blogdetails.BlogDetailsResponse;
-import com.example.blogapp.model.blogdetails.BlogResponse;
+import com.example.blogapp.mapper.BlogObjectMapper;
+import com.example.blogapp.model.blog.ResultStatus;
+import com.example.blogapp.model.blog.BlogListRes;
+import com.example.blogapp.model.blog.Blog;
 import com.example.blogapp.repository.BlogRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,55 +17,57 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
-public class BlogDetailsService implements BlogDetailsPort {
+public class BlogDetailsService implements BlogDetails {
 
     private final BlogRepository blogRepository;
-    private final BlogAppObjectMapper blogAppObjectMapper;
+    private final BlogObjectMapper blogObjectMapper;
 
     @Autowired
-    public BlogDetailsService(BlogRepository blogRepository, BlogAppObjectMapper blogAppObjectMapper) {
+    public BlogDetailsService(BlogRepository blogRepository, BlogObjectMapper blogObjectMapper) {
         this.blogRepository = blogRepository;
-        this.blogAppObjectMapper = blogAppObjectMapper;
+        this.blogObjectMapper = blogObjectMapper;
     }
 
     @Override
-    public BlogDetailsResponse getBlogs(int pageNo, int pageSize, String sortBy, String sortDir) {
+    public BlogListRes getBlogs(int pageNo, int pageSize, String sortBy, String sortDir) {
         try {
 
             Sort sort = sortDir.equalsIgnoreCase("asc") ? Sort.by(sortBy).ascending() :
                     Sort.by(sortBy).descending();
 
             Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
-            Page<Blog> blogPage = blogRepository.findAll(pageable);
+            Page<BlogCreateDaoReq> blogPage = blogRepository.findAll(pageable);
 
 
-            List<BlogResponse> blogResponses = blogPage.getContent().stream().
-                    map(blogAppObjectMapper::convertsBlogPageToBlog).toList();
+            List<Blog> blogRespons = blogPage.getContent().stream().
+                    map(blogObjectMapper::convertsBlogPageToBlog).collect(Collectors.toList());
 
-            return makeResponse(blogResponses, blogPage);
+            return makeResponse(blogRespons, blogPage);
         } catch (Exception exp) {
-            log.info(String.format(getClass() + " " + "getBlogs" + " " + Arrays.toString(exp.getStackTrace())));
+            log.info(String.format("getClass()%s%s%s%s", " ", "getBlogs"," ", Arrays.toString(exp.getStackTrace())));
             throw new BlogApiException(exp.getMessage());
         }
     }
 
-    private BlogDetailsResponse makeResponse(List<BlogResponse> blogResponses, Page<Blog> blogPage) {
-        BlogDetailsResponse blogDetailsResponse = new BlogDetailsResponse();
-        blogDetailsResponse.setBlogResponses(blogResponses);
-        blogDetailsResponse.setTotalPages(blogPage.getTotalPages());
-        blogDetailsResponse.setTotalElements(blogResponses.size());
-        blogDetailsResponse.setPageNo(blogPage.getNumber());
-        blogDetailsResponse.setLast(blogPage.isLast());
+    private BlogListRes makeResponse(List<Blog> blogRespons, Page<BlogCreateDaoReq> blogPage) {
+        BlogListRes blogListRes = new BlogListRes();
 
         ResultStatus resultStatus = new ResultStatus();
-        resultStatus.setStatusCode("200");
         resultStatus.setStatus("Success");
 
-        blogDetailsResponse.setResultStatus(resultStatus);
+        blogListRes.setResultStatus(resultStatus);
+        blogListRes.setBlogList(blogRespons);
+        blogListRes.setTotalPages(blogPage.getTotalPages());
+        blogListRes.setTotalElements(blogRespons.size());
+        blogListRes.setPageNo(blogPage.getNumber());
+        blogListRes.setLast(blogPage.isLast());
 
-        return blogDetailsResponse;
+
+
+        return blogListRes;
     }
 }
